try adding page

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,15 +23,15 @@
 #  url = "#featured"
 #  weight = 40
 
-[[main]]
-  name = "Publications"
-  url = "Publications/"
-  weight = 20
+#[[main]]
+#  name = "Publications"
+#  url = "Publications/"
+#  weight = 20
 
-[[main]]
-  name = "Projects"
-  url = "Projects/"
-  weight = 30
+#[[main]]
+#  name = "Projects"
+#  url = "Projects/"
+#  weight = 30
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
@@ -40,15 +40,15 @@
 #    url = "files/cv.pdf"
 #    weight = 40
 
-[[main]]
-    name = "Media"
-    url = "Media/"
-    weight = 50
+#[[main]]
+#    name = "Media"
+#    url = "Media/"
+#    weight = 50
 
-[[main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 60
+#[[main]]
+#  name = "Contact"
+#  url = "#contact"
+#  weight = 60
 
 
 # Link to a PDF of your resume/CV from the menu.
