adjust contact page

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,7 +35,7 @@
     url = "files/cv.pdf"
     weight = 60
 
-[[main]]
-  name = "Contact"
-  url = "contact/"
-  weight = 70
+#[[main]]
+#  name = "Contact"
+#  url = "contact/"
+#  weight = 70
